--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
 					<a href="http://cmai.math.cuhk.edu.hk/index.html">Center for Mathematical Artificial Intelligence (CMAI)</a>, <br>
 					Department of Mathematics,<br>
 					The Chinese University of Hong Kong,<br>
-					Shatin, New Territories, Hong Kong.<br>
+					G07, Lady Shaw Building, CUHK, Shatin, N.T., Hong Kong.<br>
 					<br>
-					ORCID: 0000-0001-7314-6754<br>
-					Email: cvjunchengli@gmail.com  &  junchengli@math.cuhk.edu.hk  	       
+					Email: cvjunchengli[at]gmail.com  &  junchengli[at]math.cuhk.edu.hk  	       
 				</p>
 
 				<br>
@@ -69,28 +68,8 @@
 
 <h2>Biography</h2>
 <p>
-	I am a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>.
+	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. His research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, and crowd counting) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). He has published around 20 papers in prestigious journals and conferences such as IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Image Processing (TIP), IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), IEEE Transactions on Multimedia (TMM), Pattern Recognition (PR), European Conference on Computer Vision (ECCV), and International Conference on Computer Vision (ICCV). He received several premium awards including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the Winner of ICCV-AIM 2019 (Example-based RAW to RGB Mapping Challenge), etc.
 </p>
-
-<p>
-	I received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>.
-</p>
-
-<p>My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, and crowd counting) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction).</p>
-
-<p>This web used to record my research achievement and also used to record my life experience.</p>
-
-
-
-<h2>Collaborators</h2>
-<table style="border-spacing:2px">
-	<tbody>
-		<tr><td><b> <a href="https://kfmei.page/", target="_blank"> Kangfu Mei</a></b>, Ph.D. Student, Johns Hopkins University.</td></tr> 
-		<tr><td><b> <a href="https://scholar.google.com.hk/citations?user=y5bqy0AAAAAJ&hl=zh-CN", target="_blank"> Qiaosi Yi</a></b>, Master Student, East China Normal University.</td></tr> 
-		<tr><td><b> <a href="", target="_blank"> Qinyan Dai</a></b>, Master Student, East China Normal University.</td></tr> 
-	</tbody>
-</table>
-
 
 
 <h2>News</h2>
@@ -106,7 +85,7 @@
 	</tbody>
 </table>
 
-<h3>2021-Now, 6 Papers</h3>
+<h3>2018-Present, 19 Papers</h3>
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>One paper is accepted by ICCV 2021.</td></tr> 
@@ -115,31 +94,13 @@
 		<tr><td>One paper is accepted by PR 2021.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM 2021.</td></tr> 
 		<tr><td>One paper is accepted by ICME 2021.</td></tr> 	
-	</tbody>
-</table>
-
-<h3>2020-2021, 5 Papers</h3>
-<table style="border-spacing:2px">
-	<tbody>
 		<tr><td>One paper is accepted by IEEE TCSVT 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE Access 2021.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TNNLS 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TIP 2020.</td></tr> 	
-	</tbody>
-</table>
-
-<h3>2019-2020, 4 Papers</h3>
-<table style="border-spacing:2px">
-	<tbody>
 		<tr><td>Three papers are accepted by ICCV Workshop 2019.</td></tr> 
 		<tr><td>One paper is accepted by IET Image Processing 2019.</td></tr> 	
-	</tbody>
-</table>
-
-<h3>2018-2019, 4 Papers</h3>
-<table style="border-spacing:2px">
-	<tbody>
 		<tr><td>One paper is accepted by ICONIP 2018.</td></tr> 
 		<tr><td>One paper is accepted by ACCV 2018.</td></tr> 
 		<tr><td>One paper is accepted by ECCV 2018.</td></tr> 
@@ -150,7 +111,7 @@
 
 <h2>Honors &amp; Awards</h2>
 
-<h3>2016-Now (Graduate Period)</h3>
+<h3>2016-Present (Graduate Period)</h3>
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>Outstanding PhD Graduates in Shanghai, Shanghai, 2021.</td></tr> 
@@ -207,10 +168,7 @@
 
 
 
-<h2>Selected Publications </h2>
-<h3>[Total Citations: 461] [Highest Citation: 263] [Accepted: 19]</h3>
-<h3>Accepted Conference: ICCV, ECCV, ACMMM, CVPRW, ICCVW, ICME, ACCV, ICONIP.</h3>
-<h3>Accepted Journal: TNNLS, TIP, TCSVT, TMM, PR, Access, IET Image Processing.</h3>
+<h2>Selected Publications [Total Citations: 467] [Highest Citation: 265] [Accepted: 19]</h2>
 <h4>Journal Papers</h4>
 <table id="tbPublications" wßidth="100%">
 	<tbody>
@@ -382,7 +340,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">Top computer vision conference. The most popular paper. 233 stars and 51 forks in Github.</font><br>
+		<font color="red">Top computer vision conference. The most popular paper. 233 stars and 52 forks in Github.</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
@@ -426,7 +384,7 @@
 			<td> International Conference on Multimedia and Expo (ICME-2021)</td>
 		</tr>
 		<tr>
-			<td> British Machine Vision Conference (BMVC-2020，2021)</td>
+			<td> British Machine Vision Conference (BMVC-2020, 2021)</td>
 		</tr>
 		<tr>
 			<td> International Conference on Pattern Recognition (ICPR-2020)</td>
@@ -487,24 +445,9 @@
 	</tbody>
 </table>
 
-<h2>Meeting &amp; Visiting (2016.9-Now)</h2>
+<h2>Meeting (2016.9-Present)</h2>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
-		<tr>
-			<td> <em>Postdoctoral Fellow</em>, The Chinese University of Hong Kong, Hong Kong, China, 2021.</td>
-		</tr>
-		<tr>
-			<td> <em>Research Assistant</em>, Shenzhen University, Shenzhen, China, 2020.</td>
-		</tr>
-		<tr>
-			<td> Hunan University, Changsha, China, 2020.</td>
-		</tr>
-		<tr>
-			<td> Hunan Normal University, Changsha, China, 2020.</td>
-		</tr>
-		<tr>
-			<td> National Defense University, Changsha, China, 2020.</td>
-		</tr>
 		<tr>
 			<td> <font color="red">CSIAM-2020</font>, Changsha, China, 2020.</td>
 		</tr>
@@ -518,55 +461,22 @@
 			<td> <font color="red">NeurlPS-Shanghai</font>, Shanghai, China, 2019.</td>
 		</tr>
 		<tr>
-			<td> Ewha Womans University, Seoul, Korea, 2019.</td>
-		</tr>
-		<tr>
 			<td> <font color="red">ICCV-2019</font>, Seoul, Korea, 2019.</td>
 		</tr>
 		<tr>
 			<td> <font color="red">YouKu-VSRE-2019</font>, Hanzhou, China, 2019.</td>
 		</tr>
 		<tr>
-			<td> <em>Research Assistant</em>, The Chinese University of Hong Kong, Hong Kong, China, 2019.</td>
-		</tr>
-		<tr>
 			<td> <font color="red">RAMIDS-2019</font>, Shanghai Jiao Tong University, Shanghai, China, 2019.</td>
 		</tr>
 		<tr>
-			<td> University of Science and Technology of China, Hefei, China, 2019.</td>
-		</tr>
-		<tr>
 			<td> <font color="red">VALSE-2019</font>, Hefei, China, 2019.</td>
-		</tr>
-		<tr>
-			<td> Technical University of Munich, Munich, Germany, 2018.</td>
 		</tr>
 		<tr>
 			<td> <font color="red">ECCV-2018</font>, Munich, Germany, 2018.</td>
 		</tr>
 		<tr>
 			<td> <font color="red">ECCV Pre-Conference</font>, Tencent, Shenzhen, China, 2018.</td>
-		</tr>
-		<tr>
-			<td> Macao Polytechnic Institut, Macao, China, 2018.</td>
-		</tr>
-		<tr>
-			<td> The University of Hong Kong, Hong Kong, China, 2018.</td>
-		</tr>
-		<tr>
-			<td> The Hong Kong University of Science and Technology, Hong Kong, China, 2018.</td>
-		</tr>
-		<tr>
-			<td> The Hong Kong Polytechnic University, Hong Kong, China, 2018.</td>
-		</tr>
-		<tr>
-			<td> The City University of Hong Kong, Hong Kong, China, 2018.</td>
-		</tr>
-		<tr>
-			<td> THong Kong Baptist University, Hong Kong, China, 2018.</td>
-		</tr>
-		<tr>
-			<td> <em>Research Assistant</em>, The Chinese University of Hong Kong, Hong Kong, China, 2018.</td>
 		</tr>
 		<tr>
 			<td> <font color="red">AWS Reinvent</font>, Shanghai, China, 2018.</td>
@@ -592,30 +502,9 @@
 		<tr>
 			<td> <font color="red">Youth Vision Seminar</font>, ShanghaiTech University, Shanghai, China, 2016.</td>
 		</tr>
-		<tr>
-			<td> Fudan University, Shanghai, China, 2016.</td>
-		</tr>
 	</tbody>
 </table>
 
-<h2>Visited Cities</h2>
-<table id="tbTeaching" border="0" width="100%">
-	<tbody>
-		<tr>
-			<td><i><b>China</b></i>: Hong Kong, Macao, Beijing, Shanghai, Guangzhou, Shenzhen, Zhuhai, Baoding, Hefei, Tianjin, Qingdao, Hangzhou, Jiaxing, Nanjing, Suzhou, Yangzhou, Lianyungang, Huaian, Wuxi, Shenyang, Changsha, Wuhan, Nanchang, Jiujiang, Shangrao, Jingdezhen, Xiamen, Fuzhou, Quanzhou, Putian.</td>
-		</tr>
-		<tr>
-			<td><i><b>Germany</b></i>: Munich</td>
-		</tr>
-		<tr>
-			<td><i><b>Korea</b></i>: Seoul</td>
-		</tr>
-	</tbody>
-</table>
-
-<div id="footer">
-	<div id="footer-text"></div>
-</div>
 
 <p>
 <center>
@@ -623,7 +512,7 @@
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div>     
 <br>
-&copy; Juncheng Li | Last updated: 2021-07-06
+&copy; Juncheng Li | Last updated: 2021-08-26
 </center>
 </p>
 
