--- a/index_zw.html
+++ b/index_zw.html
@@ -38,14 +38,12 @@
 				<p>
 					<a href="http://cmai.math.cuhk.edu.hk/index.html">数学人工智能研究中心（CMAI）</a>，<br>
 					数学系，香港中文大学，<br>
-					沙田，新界，香港.<br>
+					香港，新界，沙田，香港中文大学，邵逸夫夫人楼，G07室.<br>
 					<br>
-					ORCID: 0000-0001-7314-6754<br>
-					邮箱: cvjunchengli@gmail.com  &  junchengli@math.cuhk.edu.hk 	       
+					邮箱: cvjunchengli[at]gmail.com  &  junchengli[at]math.cuhk.edu.hk 	       
 				</p>
 
 				<br>
-				<p><em>成功不是终结，失败也不是，重要的是继续前行的勇气。--温斯顿·丘吉尔</em></p>
 
 				<p> 
 					<!-- <a href="https://github.com/CV-JunchengLi", target="_blank"><img src="./pic/cv_s.png" height="30px" style="margin-bottom:-3px"></a> -->
@@ -66,25 +64,8 @@
 
 <h2>简介</h2>
 <p>
-	我是香港中文大学数学人工智能研究中心的一名博后研究员。我的主管是<b> <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇 </a></b>教授 和 <b><a href="http://lokminglui.com/", target="_blank">雷乐铭</a></b>教授。
+	我是香港中文大学数学人工智能研究中心的一名博后研究员。我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授 和 <b><a href="http://lokminglui.com/", target="_blank">雷乐铭</a></b> 教授。我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由 <b>张桂戌</b>教授 和 <b>方发明</b>教授 共同指导。他的研究兴趣包括人工智能及其在计算机视觉（如图像拼接、图像分割和人群计数）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学图像重建）中的应用。他在著名的期刊和会议上发表了大约 20 篇论文，例如 IEEE Transactions on Neural Networks and Learning Systems (TNNLS)、IEEE Transactions on Image Processing (TIP)、IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)、IEEE Transactions on 多媒体 (TMM)、Pattern Recognition (PR)、欧洲计算机视觉会议 (ECCV) 和国际计算机视觉会议 (ICCV)。他获得了多项优质奖项，包括2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、ICCV-AIM 2019（基于示例的RAW到RGB映射挑战）的冠军等。
 </p>
-
-<p>
-	我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由<b>张桂戌</b>教授 和 <b>方发明</b>教授共同指导。
-</p>
-
-<p>我的研究兴趣包括人工智能及其在计算机视觉（例如：图像拼接，图像分割, 人群计数）和图像处理（例如：图像超分辨率，图像去噪, 图像去雾和医学图像重建）中的应用。</p>
-
-<p>该网站用于记录我的研究成果，也用于记录我的生活经历。</p>
-
-<h2>密切合作者</h2>
-<table style="border-spacing:2px">
-	<tbody>
-		<tr><td><b> <a href="https://kfmei.page/", target="_blank"> 梅康夫</a></b>, 博士研究生, 霍普金斯大学.</td></tr> 
-		<tr><td><b> <a href="https://scholar.google.com.hk/citations?user=y5bqy0AAAAAJ&hl=zh-CN", target="_blank"> 易侨斯</a></b>, 硕士研究生, 华东师范大学.</td></tr> 
-		<tr><td><b> <a href="", target="_blank"> 戴沁妍</a></b>, 硕士研究生, 华东师范大学.</td></tr> 
-	</tbody>
-</table>
 
 <h2>最新消息</h2>
 
@@ -99,7 +80,7 @@
 	</tbody>
 </table>
 
-<h3>2021-Now，共6篇</h3>
+<h3>2018-现在，共19篇</h3>
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>一篇论文已被 ICCV 2021 接收.</td></tr> 
@@ -108,31 +89,13 @@
 		<tr><td>一篇论文已被 PR 2021 接收.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM 2021 接收.</td></tr> 
 		<tr><td>一篇论文已被 ICME 2021 接收.</td></tr> 	
-	</tbody>
-</table>
-
-<h3>2020-2021，共5篇</h3>
-<table style="border-spacing:2px">
-	<tbody>
 		<tr><td>一篇论文已被 IEEE TCSVT 2020 接收.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM 2020 接收.</td></tr> 
 		<tr><td>一篇论文已被 IEEE Access 2021 接收.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TNNLS 2020 接收.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TIP 2020 接收.</td></tr> 	
-	</tbody>
-</table>
-
-<h3>2019-2020，共4篇</h3>
-<table style="border-spacing:2px">
-	<tbody>
 		<tr><td>三篇论文已被 ICCV Workshop 2019 接收.</td></tr> 
 		<tr><td>一篇论文已被 IET Image Processing 2019 接收.</td></tr> 	
-	</tbody>
-</table>
-
-<h3>2018-2019, 共4篇</h3>
-<table style="border-spacing:2px">
-	<tbody>
 		<tr><td>一篇论文已被 ICONIP 2018 接收.</td></tr> 
 		<tr><td>一篇论文已被 ACCV 2018 接收.</td></tr> 
 		<tr><td>一篇论文已被 ECCV 2018 接收.</td></tr> 
@@ -143,7 +106,7 @@
 
 <h2>荣誉 &amp; 奖项</h2>
 
-<h3>2016-至今 (研究生期间)</h3>
+<h3>2016-现在 (研究生期间)</h3>
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>上海市优秀博士毕业生称号, 上海市教委, 2021.</td></tr> 
@@ -200,10 +163,7 @@
 
 
 
-<h2>精选出版物 </h2>
-<h3>[总引用: 461] [最高引用: 263] [接收论文: 19]</h3>
-<h3>接收的会议: ICCV, ECCV, ACMMM, CVPRW, ICCVW, ICME, ACCV, ICONIP.</h3>
-<h3>接收的期刊: TNNLS, TIP, TCSVT, TMM, PR, Access, IET Image Processing.</h3>
+<h2>精选出版物 [总引用: 461] [最高引用: 263] [接收论文: 19]</h2>
 <h4>期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -378,7 +338,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">计算机视觉顶级会议。最受欢迎论文，在GitHub上有233颗Star，51个Fork。</font><br>
+		<font color="red">计算机视觉顶级会议。最受欢迎论文，在GitHub上有233颗Star，52个Fork。</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[论文]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[代码]</a>
@@ -421,7 +381,7 @@
 			<td> International Conference on Multimedia and Expo (ICME-2021)</td>
 		</tr>
 		<tr>
-			<td> British Machine Vision Conference (BMVC-2020，2021)</td>
+			<td> British Machine Vision Conference (BMVC-2020, 2021)</td>
 		</tr>
 		<tr>
 			<td> International Conference on Pattern Recognition (ICPR-2020)</td>
@@ -483,24 +443,9 @@
 </table>
 
 
-<h2>参会 &amp; 参观 (2016.9-现在)</h2>
+<h2>参会 (2016.9-现在)</h2>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
-		<tr>
-			<td> <em>博后研究员</em>, 香港中文大学, 香港, 中国, 2021.</td>
-		</tr>
-		<tr>
-			<td> <em>研究助理</em>, 深圳大学, 深圳, 中国, 2020.</td>
-		</tr>
-		<tr>
-			<td> 湖南大学, 长沙, 中国, 2020.</td>
-		</tr>
-		<tr>
-			<td> 湖南师范大学, 长沙, 中国, 2020.</td>
-		</tr>
-		<tr>
-			<td> 国防科技大学, 长沙, 中国, 2020.</td>
-		</tr>
 		<tr>
 			<td> <font color="red">中国工业与应用数学学会第十八届年会（CSIAM）</font>, 长沙, 中国, 2020.</td>
 		</tr>
@@ -508,13 +453,7 @@
 			<td> <font color="red">中国模式识别与计算机视觉学术会议</font>, 南京, 中国, 2020.</td>
 		</tr>
 		<tr>
-			<td> <font color="red">智慧地球研讨会</font>, 上海, 中国, 2019.</td>
-		</tr>
-		<tr>
 			<td> <font color="red">NeurlPS-上海站</font>, 上海, 中国, 2019.</td>
-		</tr>
-		<tr>
-			<td> 梨花女子大学, 首尔, 韩国, 2019.</td>
 		</tr>
 		<tr>
 			<td> <font color="red">国际计算机视觉大会（ICCV）</font>, 首尔, 韩国, 2019.</td>
@@ -523,46 +462,16 @@
 			<td> <font color="red">优酷-视频增强和超分辨率挑战赛</font>, 杭州, 中国, 2019.</td>
 		</tr>
 		<tr>
-			<td> <em>研究助理</em>, 香港中文大学, 香港, 中国, 2019.</td>
-		</tr>
-		<tr>
 			<td> <font color="red">数字图像及数据科学最新进展研讨会</font>, 上海交通大学, 上海, 中国, 2019.</td>
 		</tr>
 		<tr>
-			<td> 中国科学技术大学, 合肥, 中国, 2019.</td>
-		</tr>
-		<tr>
 			<td> <font color="red">视觉与学习青年学者研讨会（VALSE）</font>, 合肥, 中国, 2019.</td>
-		</tr>
-		<tr>
-			<td> 慕尼黑工业大学, 慕尼黑, 德国, 2018.</td>
 		</tr>
 		<tr>
 			<td> <font color="red">欧洲计算机视觉大会（ECCV）</font>, 慕尼黑, 德国, 2018.</td>
 		</tr>
 		<tr>
 			<td> <font color="red">ECCV-预演会议</font>, 腾讯, 深圳, 中国, 2018.</td>
-		</tr>
-		<tr>
-			<td> 澳门理工学院, 澳门, 中国, 2018.</td>
-		</tr>
-		<tr>
-			<td> 香港大学, 香港, 中国, 2018.</td>
-		</tr>
-		<tr>
-			<td> 香港科技大学, 香港, 中国, 2018.</td>
-		</tr>
-		<tr>
-			<td> 香港理工大学, 香港, 中国, 2018.</td>
-		</tr>
-		<tr>
-			<td> 香港城市大学, 香港, 中国, 2018.</td>
-		</tr>
-		<tr>
-			<td> 香港浸会大学, 香港, 中国, 2018.</td>
-		</tr>
-		<tr>
-			<td> <em>研究助理</em>, 香港中文大学, 香港, 中国, 2018.</td>
 		</tr>
 		<tr>
 			<td> <font color="red">AWS-数据全球峰会</font>, 上海, 中国, 2018.</td>
@@ -588,26 +497,9 @@
 		<tr>
 			<td> <font color="red">青年视觉研讨会</font>, 上海科技大学, 上海, 中国, 2016.</td>
 		</tr>
-		<tr>
-			<td> 复旦大学, 上海, 中国, 2016.</td>
-		</tr>
 	</tbody>
 </table>
 
-<h2>去过的城市</h2>
-<table id="tbTeaching" border="0" width="100%">
-	<tbody>
-		<tr>
-			<td><i><b>中国</b></i>: 香港, 澳门, 北京, 上海, 广州, 深圳, 珠海, 保定, 合肥, 天津, 青岛, 杭州, 嘉兴, 南京, 苏州, 扬州, 连云港, 淮安, 无锡, 沈阳, 长沙, 武汉, 南昌, 九江, 上饶, 景德镇, 厦门, 福州, 泉州, 莆田。</td>
-		</tr>
-		<tr>
-			<td><i><b>德国</b></i>: 慕尼黑</td>
-		</tr>
-		<tr>
-			<td><i><b>韩国</b></i>: 首尔</td>
-		</tr>
-	</tbody>
-</table>
 
 <div id="footer">
 	<div id="footer-text"></div>
@@ -619,7 +511,7 @@
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div>     
 <br>
-&copy; 李俊诚 | 最后更新: 2021-07-06
+&copy; 李俊诚 | 最后更新: 2021-08-26
 </center>
 </p>
 
