--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </table>
 
 <h2>Biography</h2>
-<p>
+<p style="text-align:justify; text-justify:inter-ideograph;">
 	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. His research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, and crowd counting) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). He has published around 20 papers in prestigious journals and conferences such as IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Image Processing (TIP), IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), IEEE Transactions on Multimedia (TMM), Pattern Recognition (PR), European Conference on Computer Vision (ECCV), and International Conference on Computer Vision (ICCV). He received several premium awards including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the Winner of ICCV-AIM 2019 (Example-based RAW to RGB Mapping Challenge), etc.
 </p>
 
