--- a/index_zw.html
+++ b/index_zw.html
@@ -63,7 +63,7 @@
 </table>
 
 <h2>简介</h2>
-<p>
+<p style="text-align:justify; text-justify:inter-ideograph;">
 	我是香港中文大学数学人工智能研究中心的一名博后研究员。我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授 和 <b><a href="http://lokminglui.com/", target="_blank">雷乐铭</a></b> 教授。我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由 <b>张桂戌</b>教授 和 <b>方发明</b>教授 共同指导。他的研究兴趣包括人工智能及其在计算机视觉（如图像拼接、图像分割和人群计数）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学图像重建）中的应用。他在著名的期刊和会议上发表了大约 20 篇论文，例如 IEEE Transactions on Neural Networks and Learning Systems (TNNLS)、IEEE Transactions on Image Processing (TIP)、IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)、IEEE Transactions on 多媒体 (TMM)、Pattern Recognition (PR)、欧洲计算机视觉会议 (ECCV) 和国际计算机视觉会议 (ICCV)。他获得了多项优质奖项，包括2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、ICCV-AIM 2019（基于示例的RAW到RGB映射挑战）的冠军等。
 </p>
 
