--- a/index.html
+++ b/index.html
@@ -157,9 +157,29 @@
 
 
 
-<h2>Selected Publications [Total Citations: 476] [Highest Citation: 270] [Accepted: 19]</h2>
+<h2>Selected Publications [Total Citations: 478] [Highest Citation: 271] [Accepted: 19]</h2>
+
+<h4>Preprint Papers</h4>
+<table id="tbPublications" width="100%">
+	<tbody>
+    <tr>	
+		<td width="206">
+		<img src="./indexpics/ETSR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://arxiv.org/abs/2108.11084" target="_blank">Efficient Transformer for Single Image Super-Resolution</a><br>
+		Zhisheng Lu, Hong Liu, <b>Juncheng Li</b>, and Linlin Zhang.
+		<p><em>arXiv 2108.11084</em>, 2021. <br>
+		<font color="red">The first Transformer-based lightweight SISR model.</font><br>
+        <a href="paper/ETSR_2021.pdf", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+</tbody></table>
+
 <h4>Journal Papers</h4>
-<table id="tbPublications" wßidth="100%">
+<table id="tbPublications" width="100%">
 	<tbody>
     <tr>	
 		<td width="206">
