--- a/index_zw.html
+++ b/index_zw.html
@@ -152,7 +152,26 @@
 
 
 
-<h2>精选出版物 [总引用: 476] [最高引用: 270] [接收论文: 19]</h2>
+<h2>精选出版物 [总引用: 478] [最高引用: 271] [接收论文: 19]</h2>
+<h4>预印本</h4>
+<table id="tbPublications" width="100%">
+	<tbody>
+    <tr>	
+		<td width="206">
+		<img src="./indexpics/ETSR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://arxiv.org/abs/2108.11084" target="_blank">Efficient Transformer for Single Image Super-Resolution</a><br>
+		Zhisheng Lu, Hong Liu, <b>Juncheng Li</b>, and Linlin Zhang.
+		<p><em>arXiv 2108.11084</em>, 2021. <br>
+		<font color="red">第一个基于Transformer的轻量级SISR模型.</font><br>
+        <a href="paper/ETSR_2021.pdf", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+</tbody></table>
+
 <h4>期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
