--- a/index.html
+++ b/index.html
@@ -431,6 +431,29 @@
 	<tbody>
 		<tr>	
 			<td width="110">
+					<img src="./reports/CUHK.png" width="100" style="box-shadow: 4px 4px 8px #888">
+			</td>		
+			<td> Structure-Preserving Deraining with Residue Channel Prior Guidance<br>
+				<p><em>Internal meeting, Chinese University of Hong Kong.</em><br>
+				Hong Kong, China, 2021.08.20<br>
+				<a href="slides/CUHK.pdf", target="_blank">[Slides]</a>
+			</td>
+		</tr>
+
+		<tr>	
+			<td width="110">
+					<img src="./reports/SZ.png" width="100" style="box-shadow: 4px 4px 8px #888">
+			</td>		
+			<td> Exploration and Construction of Lightweight Image Restoration Model<br>
+				<p><em>Institute of Big Data Technology and Application, School of Computer and Software, Shenzhen University.</em><br>
+				Shenzhen, China, 2020.12.21.<br>
+				<a href="poster/SZ.pdf", target="_blank">[Poster]</a>
+				<a href="slides/SZ-Lightweight.pdf", target="_blank">[Slides]</a>
+			</td>
+		</tr>
+
+		<tr>	
+			<td width="110">
 				<img src="./reports/ICCV.png" width="100" style="box-shadow: 4px 4px 8px #888">
 			</td>		
 			<td> Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution<br>
@@ -439,18 +462,6 @@
 				<a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[Slides]</a>
 			</td>
 		</tr>
-
-		<tr>	
-			<td width="110">
-					<img src="./reports/SZ.png" width="100" style="box-shadow: 4px 4px 8px #888">
-				</td>		
-				<td> Exploration and Construction of Lightweight Image Restoration Model<br>
-					<p><em>Institute of Big Data Technology and Application, School of Computer and Software, Shenzhen University.</em><br>
-					Shenzhen, China, 2020.12.21.<br>
-					<a href="poster/SZ.pdf", target="_blank">[Poster]</a>
-					<a href="slides/SZ-Lightweight.pdf", target="_blank">[Slides]</a>
-				</td>
-			</tr>
 	</tbody>
 </table>
 
