--- a/index_zw.html
+++ b/index_zw.html
@@ -427,6 +427,29 @@
 	<tbody>
 		<tr>	
 			<td width="110">
+				<img src="./reports/CUHK.png" width="100" style="box-shadow: 4px 4px 8px #888">
+			</td>		
+			<td> Structure-Preserving Deraining with Residue Channel Prior Guidance<br>
+				<p><em>内部组会，香港中文大学.</em><br>
+				香港, 中国, 2021.08.20<br>
+				<a href="slides/CUHK.pdf", target="_blank">[Slides]</a>
+			</td>
+		</tr>
+
+		<tr>	
+			<td width="110">
+				<img src="./reports/SZ.png" width="100" style="box-shadow: 4px 4px 8px #888">
+			</td>		
+			<td> Exploration and Construction of Lightweight Image Restoration Model<br>
+				<p><em>大数据技术与应用研究所，计算机与软件学院，深圳大学.</em><br>
+				深圳, 中国, 2020.12.21.<br>
+				<a href="poster/SZ.pdf", target="_blank">[海报]</a>
+				<a href="slides/SZ-Lightweight.pdf", target="_blank">[PPT]</a>
+			</td>
+		</tr>
+		
+		<tr>	
+			<td width="110">
 				<img src="./reports/ICCV.png" width="100" style="box-shadow: 4px 4px 8px #888">
 			</td>		
 			<td> Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution<br>
@@ -435,18 +458,6 @@
 				<a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[PPT]</a>
 			</td>
 		</tr>
-
-		<tr>	
-			<td width="110">
-					<img src="./reports/SZ.png" width="100" style="box-shadow: 4px 4px 8px #888">
-				</td>		
-				<td> Exploration and Construction of Lightweight Image Restoration Model<br>
-					<p><em>大数据技术与应用研究所，计算机与软件学院，深圳大学.</em><br>
-					深圳, 中国, 2020.12.21.<br>
-					<a href="poster/SZ.pdf", target="_blank">[海报]</a>
-					<a href="slides/SZ-Lightweight.pdf", target="_blank">[PPT]</a>
-				</td>
-			</tr>
 	</tbody>
 </table>
 
