--- a/index_zw.html
+++ b/index_zw.html
@@ -152,7 +152,7 @@
 
 
 
-<h2>精选出版物 [总引用: 478] [最高引用: 271] [接收论文: 19]</h2>
+<h2>精选出版物 [总引用: 480] [最高引用: 272] [接收论文: 19]</h2>
 <h4>预印本</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -432,7 +432,7 @@
 			<td> Structure-Preserving Deraining with Residue Channel Prior Guidance<br>
 				<p><em>内部组会，香港中文大学.</em><br>
 				香港, 中国, 2021.08.20<br>
-				<a href="slides/CUHK.pdf", target="_blank">[Slides]</a>
+				<a href="slides/CUHK.pdf", target="_blank">[PPT]</a>
 			</td>
 		</tr>
 
