--- a/index.html
+++ b/index.html
@@ -176,7 +176,22 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-</tbody></table>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/SISR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://arxiv.org/pdf/2109.14335.pdf" target="_blank">From Beginner to Master: A Survey for Deep Learning-based Single-Image Super-Resolution</a><br>
+		<b>Juncheng Li</b>, Zehua Pei, and Tieyong Zeng.
+		<p><em>arXiv 2109.14335</em>, 2021.<br>
+		<a href="paper/SISR_2021.pdf", target="_blank">[Paper]</a>
+		<a href="https://github.com/CV-JunchengLi/SISR-Survey", target="_blank">[Homepage]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+ </tbody></table>
 
 <h4>Journal Papers</h4>
 <table id="tbPublications" width="100%">
