--- a/index_zw.html
+++ b/index_zw.html
@@ -170,6 +170,21 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/SISR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://arxiv.org/pdf/2109.14335.pdf" target="_blank">From Beginner to Master: A Survey for Deep Learning-based Single-Image Super-Resolution</a><br>
+		<b>Juncheng Li</b>, Zehua Pei, and Tieyong Zeng.
+		<p><em>arXiv 2109.14335</em>, 2021.<br>
+		<a href="paper/SISR_2021.pdf", target="_blank">[论文]</a>
+		<a href="https://github.com/CV-JunchengLi/SISR-Survey", target="_blank">[项目主页]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
 </tbody></table>
 
 <h4>期刊论文</h4>
