--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@
 <h2>Research Experience</h2>
 <ul>
 	<li>
+		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2021.07.05--Now</div><br>
+		Postdoctoral Fellow<br>
+		Topic: Image resolution and medical image reconstruction<br>
+		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b><br>
+	</li>
+	<li>
 		<div style="float:left; text-align:left">Shenzhen University, Shenzhen. </div> <div style="float:right; text-align:right">2020.12.11--2021.01.30</div><br>
 		Research Assistant (RA)<br>
 		Topic: Medical Image Segmentation & Research on Uncertainty in Deep Learning<br>
@@ -157,7 +163,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 521] [Highest Citation: 295] [Accepted: 19]</h2>
+<h2>Selected Publications [Total Citations: 530] [Highest Citation: 298] [Accepted: 19]</h2>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
@@ -294,6 +300,7 @@
 		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
 		<font color="red">Top computer vision conference. Guided by me.</font><br>
 		<a href="paper/ICCV_2021.pdf", target="_blank">[Paper]</a>
+		<a href="poster/ICCV_poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/Joyies/SPDNet", target="_blank">[Code]</a>
 		<a href="https://junchenglee.com/projects/ICCV2021_SPDNet", target="_blank">[Homepage]</a>
 		</td>
@@ -312,6 +319,7 @@
 		<p><em>ACM International Conference on Multimedia</em> (<i><b>ACM MM</b></i>), 2021. <br>
 		<font color="red">Top multimedia conference. Guided by me.</font><br>
 		<a href="paper/ACMMM_2021.pdf", target="_blank">[Paper]</a>
+		<a href="poster/ACMMM_poster.pdf", target="_blank">[Poster]</a>
         <a href="#", target="_blank">[Code]</a>
 		</td>
 	</tr>
