--- a/index_zw.html
+++ b/index_zw.html
@@ -131,6 +131,12 @@
 <h2>科研经历</h2>
 <ul>
 	<li>
+		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2021.07.05--现在</div>
+		职位: 博后研究员<br>
+		研究内容: 图像复原和MRI图像重建<br>
+		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a> 教授和<a href="http://lokminglui.com/", target="_blank">雷乐铭</a>教授<br>
+	</li>
+	<li>
 		<div style="text-align:left">深圳大学, 深圳 </div> <div style="float:right; text-align:right">2020.12.11--2021.01.30</div>
 		职位: 研究助理<br>
 		研究内容: 医学图像分割、深度学习中的不确定性研究<br>
@@ -152,7 +158,7 @@
 
 
 
-<h2>精选出版物 [总引用: 521] [最高引用: 295] [接收论文: 19]</h2>
+<h2>精选出版物 [总引用: 530] [最高引用: 298] [接收论文: 19]</h2>
 <h4>预印本</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -291,6 +297,7 @@
 		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
 		<font color="red">计算机顶级会议。由我指导。</font><br>
 		<a href="paper/ICCV_2021.pdf", target="_blank">[论文]</a>
+		<a href="poster/ICCV_poster.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/Joyies/SPDNet", target="_blank">[代码]</a>
 		<a href="https://junchenglee.com/projects/ICCV2021_SPDNet", target="_blank">[主页]</a>
 		</td>
@@ -309,6 +316,7 @@
 		<p><em>ACM International Conference on Multimedia</em> (<i><b>ACM MM</b></i>), 2021. <br>
 		<font color="red">多媒体顶级会议。由我指导。</font><br>
 		<a href="paper/ACMMM_2021.pdf", target="_blank">[论文]</a>
+		<a href="poster/ACMMM_poster.pdf", target="_blank">[海报]</a>
         <a href="#", target="_blank">[代码]</a>
 		</td>
 	</tr>
