--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2021.07.05--Now</div><br>
 		Postdoctoral Fellow<br>
 		Topic: Image resolution and medical image reconstruction<br>
-		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b><br>
+		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a><br>
 	</li>
 	<li>
 		<div style="float:left; text-align:left">Shenzhen University, Shenzhen. </div> <div style="float:right; text-align:right">2020.12.11--2021.01.30</div><br>
