--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 530] [Highest Citation: 298] [Accepted: 19]</h2>
+<h2>Selected Publications [Total Citations: 538] [Highest Citation: 303]</h2>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
@@ -372,7 +372,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">Top computer vision conference. The most popular paper. 239 stars and 54 forks in Github.</font><br>
+		<font color="red">Top computer vision conference. The most popular paper. 241 stars and 54 forks in Github.</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
