--- a/index_zw.html
+++ b/index_zw.html
@@ -158,7 +158,7 @@
 
 
 
-<h2>精选出版物 [总引用: 538] [最高引用: 303] </h2>
+<h2>精选出版物 [总引用: 542] [最高引用: 305] </h2>
 <h4>预印本</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -293,7 +293,7 @@
 		<img src="./indexpics/ICCV2021.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="paper/ICCV_2021.pdf" target="_blank">Structure-Preserving Deraining with Residue Channel Prior Guidance</a><br>
-		Qiaosi Yi, <b>Juncheng Li</b>, Qinyan Dai, Faming Fang, Guixu Zhang1g, and Tieyong Zeng.
+		Qiaosi Yi, <b>Juncheng Li</b>, Qinyan Dai, Faming Fang, Guixu Zhang, and Tieyong Zeng.
 		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
 		<font color="red">计算机顶级会议。由我指导。</font><br>
 		<a href="paper/ICCV_2021.pdf", target="_blank">[论文]</a>
@@ -369,7 +369,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">计算机视觉顶级会议。最受欢迎论文，在GitHub上有241颗Star，54个Fork。</font><br>
+		<font color="red">计算机视觉顶级会议。最受欢迎论文，在GitHub上有243颗Star，54个Fork。</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[论文]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[代码]</a>
