--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 542] [Highest Citation: 305]</h2>
+<h2>Selected Publications [Total Citations: 545] [Highest Citation: 307]</h2>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
@@ -399,6 +399,9 @@
 		</tr>
         <tr>
 			<td> Information Science (INS, SCI-1)</td>
+		</tr>
+		<tr>
+			<td> Pattern Recognition (PR, SCI-1)</td>
 		</tr>
 		<tr>
 			<td> Knowledge-Based Systems (KBS, SCI-1)</td>
