--- a/index_zw.html
+++ b/index_zw.html
@@ -158,7 +158,7 @@
 
 
 
-<h2>精选出版物 [总引用: 542] [最高引用: 305] </h2>
+<h2>精选出版物 [总引用: 545] [最高引用: 307] </h2>
 <h4>预印本</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -395,6 +395,9 @@
 		</tr>
         <tr>
 			<td> Information Science (INS, SCI-1)</td>
+		</tr>
+		<tr>
+			<td> Pattern Recognition (PR, SCI-1)</td>
 		</tr>
 		<tr>
 			<td> Knowledge-Based Systems (KBS, SCI-1)</td>
