--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 549] [Highest Citation: 307]</h2>
+<h2>Selected Publications [Total Citations: 550] [Highest Citation: 307]</h2>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
@@ -176,7 +176,7 @@
 		Zhisheng Lu, Hong Liu, <b>Juncheng Li</b>, and Linlin Zhang.
 		<p><em>arXiv 2108.11084</em>, 2021. <br>
 		<font color="red">The first Transformer-based lightweight SISR model.</font><br>
-        <a href="paper/ETSR_2021.pdf", target="_blank">[Paper]</a>
+        <a href="paper/ESRT_2021.pdf", target="_blank">[Paper]</a>
 		</td>
 	</tr>
 	<tr></tr>
