--- a/index_zw.html
+++ b/index_zw.html
@@ -158,7 +158,7 @@
 
 
 
-<h2>精选出版物 [总引用: 549] [最高引用: 307] </h2>
+<h2>精选出版物 [总引用: 550] [最高引用: 307] </h2>
 <h4>预印本</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -170,7 +170,7 @@
 		Zhisheng Lu, Hong Liu, <b>Juncheng Li</b>, and Linlin Zhang.
 		<p><em>arXiv 2108.11084</em>, 2021. <br>
 		<font color="red">第一个基于Transformer的轻量级SISR模型.</font><br>
-        <a href="paper/ETSR_2021.pdf", target="_blank">[论文]</a>
+        <a href="paper/ESRT_2021.pdf", target="_blank">[论文]</a>
 		</td>
 	</tr>
 	<tr></tr>
