--- a/index_zw.html
+++ b/index_zw.html
@@ -64,7 +64,7 @@
 
 <h2>简介</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	我是香港中文大学数学人工智能研究中心的一名博后研究员。我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授 和 <b><a href="http://lokminglui.com/", target="_blank">雷乐铭</a></b> 教授。我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由 <b>张桂戌</b>教授 和 <b>方发明</b>教授 共同指导。他的研究兴趣包括人工智能及其在计算机视觉（如图像拼接、图像分割和人群计数）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学图像重建）中的应用。他在著名的期刊和会议上发表了大约 20 篇论文，例如 IEEE Transactions on Neural Networks and Learning Systems (TNNLS)、IEEE Transactions on Image Processing (TIP)、IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)、IEEE Transactions on 多媒体 (TMM)、Pattern Recognition (PR)、欧洲计算机视觉会议 (ECCV) 和国际计算机视觉会议 (ICCV)。他获得了多项优质奖项，包括2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、ICCV-AIM 2019（基于示例的RAW到RGB映射挑战）的冠军等。
+	我是香港中文大学数学人工智能研究中心的一名博后研究员。我的主管是 <b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授 和 <b><a href="http://lokminglui.com/", target="_blank">雷乐铭</a></b> 教授。我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由 <b>张桂戌</b>教授 和 <b>方发明</b>教授 共同指导。他的研究兴趣包括人工智能及其在计算机视觉（如图像拼接、图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学图像重建）中的应用。他在著名的期刊和会议上发表了大约 20 篇论文，例如 IEEE Transactions on Neural Networks and Learning Systems (TNNLS)、IEEE Transactions on Image Processing (TIP)、IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)、IEEE Transactions on 多媒体 (TMM)、Pattern Recognition (PR)、欧洲计算机视觉会议 (ECCV) 和国际计算机视觉会议 (ICCV)、ACM International Conference on Multimedia (ACMMM)。他获得了多项优质奖项，包括2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）的冠军等。
 </p>
 
 <h2>最新消息</h2>
@@ -143,7 +143,7 @@
 		主管: <a href="http://www.hebmlc.org/", target="_blank">王熙照</a> 教授 (IEEE Fellow, CAAI Fellow, JMLC 主编)<br>
 	</li>
 	<li>
-		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2018.05.10--2018.09.10</div>
+		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2019.08.16--2019.09.30</div>
 		职位: 研究助理<br>
 		研究内容: 图像压缩<br>
 		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a> 教授 (<a href="http://cmai.math.cuhk.edu.hk/index.html">数学人工智能研究中心（CMAI）</a>主任)<br>
@@ -158,7 +158,7 @@
 
 
 
-<h2>精选出版物 [总引用: 550] [最高引用: 307] </h2>
+<h2>精选出版物 [总引用: 562] [最高引用: 311] </h2>
 <h4>预印本</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -388,22 +388,22 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> IEEE Transactions on Image Processing (TIP, SCI-1) </td>
+			<td> IEEE Transactions on Image Processing</td>
 		</tr>
 		<tr>
-			<td> IEEE Transactions on Multimedia (TMM, SCI-1)</td>
+			<td> IEEE Transactions on Multimedia</td>
 		</tr>
         <tr>
-			<td> Information Science (INS, SCI-1)</td>
+			<td> Information Science</td>
 		</tr>
 		<tr>
-			<td> Pattern Recognition (PR, SCI-1)</td>
+			<td> Pattern Recognition</td>
 		</tr>
 		<tr>
-			<td> Knowledge-Based Systems (KBS, SCI-1)</td>
+			<td> Knowledge-Based Systems</td>
 		</tr>
 		<tr>
-			<td> IEEE Signal Processing Letters (SPL)</td>
+			<td> IEEE Signal Processing Letters</td>
 		</tr>
 	</tbody>
 </table>
@@ -556,7 +556,7 @@
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div>     
 <br>
-&copy; 李俊诚 | 最后更新: 2021-08-26
+&copy; 李俊诚 | 最后更新: 2021-11
 </center>
 </p>
 
