--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. His research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, and crowd counting) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). He has published around 20 papers in prestigious journals and conferences such as IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Image Processing (TIP), IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), IEEE Transactions on Multimedia (TMM), Pattern Recognition (PR), European Conference on Computer Vision (ECCV), and International Conference on Computer Vision (ICCV). He received several premium awards including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the Winner of ICCV-AIM 2019 (Example-based RAW to RGB Mapping Challenge), etc.
+	Dr. Juncheng Li is a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>. He received the Ph.D. from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. His research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, and crowd counting) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction). He has published around 20 papers in prestigious journals and conferences such as IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Image Processing (TIP), IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), IEEE Transactions on Multimedia (TMM), Pattern Recognition (PR), European Conference on Computer Vision (ECCV), International Conference on Computer Vision (ICCV), and ACM International Conference on Multimedia (ACMMM). He received several premium awards including the Outstanding PhD Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the Winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc.
 </p>
 
 
@@ -163,7 +163,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 550] [Highest Citation: 307]</h2>
+<h2>Selected Publications [Total Citations: 562] [Highest Citation: 311]</h2>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
@@ -392,22 +392,22 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> IEEE Transactions on Image Processing (TIP, SCI-1) </td>
+			<td> IEEE Transactions on Image Processing</td>
 		</tr>
 		<tr>
-			<td> IEEE Transactions on Multimedia (TMM, SCI-1)</td>
+			<td> IEEE Transactions on Multimedia</td>
 		</tr>
         <tr>
-			<td> Information Science (INS, SCI-1)</td>
+			<td> Information Science</td>
 		</tr>
 		<tr>
-			<td> Pattern Recognition (PR, SCI-1)</td>
+			<td> Pattern Recognition</td>
 		</tr>
 		<tr>
-			<td> Knowledge-Based Systems (KBS, SCI-1)</td>
+			<td> Knowledge-Based Systems</td>
 		</tr>
 		<tr>
-			<td> IEEE Signal Processing Letters (SPL)</td>
+			<td> IEEE Signal Processing Letters</td>
 		</tr>
 	</tbody>
 </table>
@@ -558,7 +558,7 @@
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div>     
 <br>
-&copy; Juncheng Li | Last updated: 2021-08-26
+&copy; Juncheng Li | Last updated: 2021-11
 </center>
 </p>
 
