--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 <h3>2018-Present, 19 Papers</h3>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted by AAAI 2021.</td></tr> 
 		<tr><td>One paper is accepted by ICCV 2021.</td></tr> 
 		<tr><td>One paper is accepted by ACM MM 2021.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM 2021.</td></tr> 
@@ -163,7 +164,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 562] [Highest Citation: 311]</h2>
+<h2>Selected Publications [Total Citations: 568] [Highest Citation: 314]</h2>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
