--- a/index_zw.html
+++ b/index_zw.html
@@ -72,6 +72,7 @@
 <h3>2018-现在，共19篇</h3>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 AAAI 2021 接收.</td></tr> 
 		<tr><td>一篇论文已被 ICCV 2021 接收.</td></tr> 
 		<tr><td>一篇论文已被 ACM MM 2021 接收.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM 2021 接收.</td></tr> 
@@ -158,7 +159,7 @@
 
 
 
-<h2>精选出版物 [总引用: 562] [最高引用: 311] </h2>
+<h2>精选出版物 [总引用: 568] [最高引用: 314] </h2>
 <h4>预印本</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
